# RepoGuardian

./: .env.example  .gitignore  README.md  environment.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: providers.py  review_agent.py
backend/app/api/: reviews.py
backend/app/core/: config.py  database.py
backend/app/graph/: builder.py  checkpointer.py  policies.py  repair_graph.py  review_graph.py  routers.py  state.py
backend/app/graph/nodes/: _events.py  agent_decide.py  baseline.py  context_retrieve.py  diff_parse.py  human_required.py  intake.py  patch.py  project_detection.py  repair_policy.py  repo_index.py  repo_prepare.py  report.py  review.py  review_units.py  static_analysis.py  test.py  verification.py
backend/app/models/: orm.py  review.py
backend/app/projects/: __init__.py  adapter.py  python.py  registry.py
backend/app/services/: report_service.py  review_planner.py  review_rebuild.py  review_service.py  review_unit_executor.py  validation_service.py
backend/app/tools/: base.py  code_search.py  command_runner.py  diff_parser.py  git_tool.py  github_tool.py  patch_tool.py  repo_indexer.py  static_analyzer.py  test_runner.py
backend/tests/: conftest.py  test_agent_graph.py  test_agent_tools.py  test_code_search.py  test_diff_parser.py  test_github_tool.py  test_langsmith_tracing.py  test_patch_isolation.py  test_project_adapter.py  test_provider.py  test_repo_indexer.py  test_report_service.py  test_review_pipeline.py  test_review_units.py  test_validation.py
backend/tests/fixtures/sample_python_repo/: pricing.py
(+17 files in other folders)
