[project]
name = "repo-guardian-backend"
version = "0.1.0"
description = "RepoGuardian basic pull request review backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "unidiff>=0.7.5",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langchain-openai>=0.3.0",
    "langsmith>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "sse-starlette>=2.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
